removed the rightr boarder from the first two board sections in each board row to prevent borders from overlapping

--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,7 @@ body {
     padding: 0;
     margin: 0; 
 }
+
+.remove-right-border {
+    border-right: none;
+}
